# celestia-zk-da

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TRANSFER_LOADING_FIX.md  docker-compose.yml
crates/app_da_node/: Cargo.toml
crates/app_da_node/src/: api.rs  client.rs  lib.rs  node.rs  sync.rs
crates/blob_schema/: Cargo.toml
crates/blob_schema/src/: lib.rs
crates/celestia_adapter/: Cargo.toml
crates/celestia_adapter/src/: lib.rs
crates/merkle/: Cargo.toml
crates/merkle/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/transition_format/: Cargo.toml
crates/transition_format/src/: lib.rs
crates/verifier_lib/: Cargo.toml
crates/verifier_lib/src/: lib.rs
crates/zk_guest_transition/: Cargo.toml
crates/zk_guest_transition/src/: main.rs
crates/zk_host_harness/: Cargo.toml  build.rs
crates/zk_host_harness/src/: lib.rs
examples/finance_app/: Cargo.toml
examples/finance_app/src/: main.rs
frontend/: index.html
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: Accounts.tsx  Dashboard.tsx  ProofExplorer.tsx  Transfers.tsx
testnet/celestia-app/: init.sh
