[package]
name = "celestia_adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Adapter for interacting with Celestia DA layer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blob_schema = { workspace = true }
