[package]
name = "merkle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sparse Merkle Tree implementation for state commitment"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
