[package]
name = "state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "State management with Merkle commitment"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
sled = { workspace = true }
merkle = { workspace = true }
